[package]
authors = ["Mickaël RAYBAUD-ROIG <raybaudroigm@gmail.com>"]
description = "A minimalist static website generator"
include = ["Cargo.toml", "Cargo.lock", "LICENSE.markdown", "README.markdown", "CHANGELOG.markdown", "src/**/.rs", "src/**/.hbs", "example_data/**"]
keywords = ["staticsite", "website", "blog"]
license = "AGPL-3.0"
name = "helianto"
readme = "README.markdown"
repository = "https://github.com/m-r-r/helianto.git"
version = "0.1.1"

[dependencies]
chrono = "0.4.19"
getopts = "0.2.21"
handlebars = "3.5.0"
log = "0.4.11"
num = "0.3.0"
pulldown-cmark = "0.8.0"
regex = "1.4.1"
serde = { version = "1.0.117", features = ["derive", "rc"] }
pretty_env_logger = "0.4"
toml = "0.5.7"
walkdir = "2.3.1"
